--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres
       - PGDATA=/var/lib/postgresql/data/pgdata/
+      - POSTGRES_DB=testdb
     container_name: postgres
     volumes:
       - ./database/data/:/var/lib/postgresql/data
